# ansible_playbooks

./: README.md  ansible.cfg  create_certificates.yml  deploy_docker.yml  deploy_docker_app.yml  deploy_docker_frigate.yml  deploy_docker_infra.yml  deploy_downloader.yml  deploy_gitlab.yml  deploy_kanban.yml  deploy_nextcloud.yml  deploy_pihole.yml  deploy_plex.yml  deploy_seafile.yml  deploy_wiki.yml  main.py  pyproject.toml  restore_wiki.yml
_deprecated/: deploy_log_collector.yml  deploy_music_server.yml  deploy_pihole.yml  deploy_splunk.yml  deploy_unifi.yml
inventory/: hosts.yml
inventory/certificates/: CA.crt  downloader-01.crt  freenas.crt  gitlab-01.crt  router.crt  seafile-01.crt
inventory/certificates/keys/: CA_key.pem  downloader-01.pem  freenas.pem  gitlab-01.pem  router.pem  seafile-01.pem
inventory/group_vars/all/: main.yml  vault.yml
roles/cifs_server/meta/: main.yml
roles/cifs_server/tasks/: install_cifs_server.yml  main.yml
roles/cifs_server/templates/: smb.conf.j2
roles/common/defaults/: main.yml
roles/common/files/: check_lock.sh
roles/common/tasks/: change_hostname.yml  create_certificate.yml  create_kvm.yml  create_lxc.yml  mount_share.yml  post_creation.yml  rotate_backups.yml
roles/common/templates/: .smbcredential.j2  ntp.conf.j2  rotate_backups.sh.j2
roles/common/vars/: main.yml  vault.yml
roles/docker/defaults/: main.yml
roles/docker/tasks/: install_docker.yml  main.yml
roles/docker/templates/: backup_docker_volumes.sh.j2  backup_docker_volumes_frigate.sh.j2  docker-compose@.service.j2
roles/docker/vars/: main.yml
(+277 files in other folders)
